# learn_opencv

./: .gitignore
cpp/: CMakeLists.txt  config.h  main.cpp
cpp/include/: chapter1.h  chapter1.hpp  chapter2.hpp  chapter3.hpp  chapter4.hpp  chapter5.hpp  chapter6.hpp  chapter7.hpp  chapter8.hpp  test.h
